# gambiarra

./: .gitignore  LICENSE  README.md  TECH-SPEC.md  TEST-STRATEGY.md  pyproject.toml  pytest.ini  run_tests.py  tool_versions.json
gambiarra/: __init__.py  __main__.py
gambiarra/client/: __init__.py  __main__.py  config.py  main.py  package.json
gambiarra/client/context/: __init__.py  conversation_memory.py  file_context_tracker.py
gambiarra/client/security/: __init__.py  approval_manager.py  command_filter.py  path_validator.py  smart_approval_manager.py  tool_repetition_detector.py  tool_validator.py
gambiarra/client/tools/: __init__.py  base.py  command_ops.py  completion_ops.py  diff_ops.py  file_ops.py  search_ops.py
gambiarra/server/: __init__.py  __main__.py  config.py  main.py  websocket_handler.py
gambiarra/server/ai_integration/: __init__.py  providers.py
gambiarra/server/core/: __init__.py
gambiarra/server/core/events/: __init__.py  bus.py
gambiarra/server/core/performance/: __init__.py  connection_pool.py  request_batcher.py
gambiarra/server/core/plugins/: __init__.py  base.py  manager.py
gambiarra/server/core/plugins/builtin/: example_tool.py  plugin.json
gambiarra/server/core/providers/: __init__.py  base.py  manager.py  openai.py  test.py
gambiarra/server/core/recovery/: __init__.py  circuit_breaker.py  degraded_mode.py  retry.py
gambiarra/server/core/session/: context.py
gambiarra/server/core/task/: __init__.py  handlers.py  manager.py  state.py  workflow.py
gambiarra/server/core/tools/: __init__.py  parser.py  registry.py  validator.py  versioning.py
gambiarra/server/error_handling/: __init__.py  recovery.py
gambiarra/server/prompts/: __init__.py  sections.py  system.py  tools.py
gambiarra/server/session/: __init__.py  manager.py
gambiarra/server/tools/: mode_filter.py
gambiarra/shared/: __init__.py
gambiarra/test_llm/: __init__.py  __main__.py  main.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/ai_responses/: sample_responses.json
tests/fixtures/tool_calls/: valid_calls.xml
tests/integration/client_server/: test_tool_execution_flow.py
tests/unit/client/security/: test_path_validator.py
tests/unit/client/tools/: test_file_ops.py
tests/unit/server/core/: test_message_parser.py  test_protocol.py
tests/unit/server/error_handling/: test_recovery.py
tests/unit/server/providers/: test_ai_integration.py
tests/unit/server/session/: test_manager.py
tests/unit/server/tools/: test_parser.py  test_registry.py
tests/unit/server/websocket/: test_handler.py
